syntax = "proto3";

package sett;

option go_package = "./out";

service Settings {
    //Cheange the table Users in User (client)
    rpc UpdUserUsers(UpdUsersRequest) returns (EmptyResponse);

    //Changes the table Schedule in Schedule (client)
    rpc UpdSchedule(ScheduleServRequest) returns (EmptyResponse);

    //Changes the table Schedule in Registration (client)
    rpc UpdReg(RegServRequest) returns (EmptyResponse);

    //Changes the table Schedule in Media (client)
    rpc UpdMediaSch(MediaServRequestSch) returns (EmptyResponse);

    //Changes the table Schedule in Settings (server)
    rpc UpdSettingSch(SettingServRequestSch) returns (EmptyResponse);

    ////Changes the table GamesWithUsers in Settings (server) 
    rpc UpdSettingGWU(SettingServRequestGWU) returns (EmptyResponse);
}

message UpdUsersRequest {
    int64 userid = 1;
    string language = 2;
    bool customlang = 3;
}

message ScheduleServRequest {
    int64 gameid = 1;
    string sport = 2;
    string date = 3;
    string time = 4;
    int64 seats = 5;
    int64 price = 9;
    string currency = 10;
    string action = 12; //new, del or change
}

message RegServRequest {
    int64 gameid = 1;
    string sport = 2;
    int64 date = 3;
    int64 time = 4;
    int64 seats = 5;
    int64 price = 6;
    string currency = 7;
    int64 status = 8;
    string action = 9; //new, del or change
}

message MediaServRequestSch {
    int64 gameid = 1;
    string sport = 2;
    int64 date = 3;
    int64 time = 4;
    string action = 5; //new, del or change
    int64 status = 6;
}

message SettingServRequestSch {
    int64 gameid = 1;
    string sport = 2;
    int64 date = 3;
    int64 time = 4;
    int64 price = 5;
    string currency = 6;
    int64 seats = 7;
    int64 status = 8;
    string action = 9; //new, del or change
}

message SettingServRequestGWU {
    int64 id = 1;
    int64 userid = 2;
    int64 gameid = 3;
    int64 seats = 4;
    string payment = 5;
    int64 statpay = 6;
    int64 status = 7;
    string action = 8; //new, del or change
}

message EmptyResponse {
   //Empty
}